# GenerativeTrackingOptimization

./: .gitignore  CMakeLists.txt  README.md
include/: SkeletonMesh.h  SkeletonModel.h  mesh.h  model.h  shader.h
res/models/: foot_5.mtl
res/shaders/: FragmentShader.glsl  MainTestFragmentShader.glsl  MainTestVertexShader.glsl  PTFS.glsl  PTFSRepeat.glsl  PTVS.glsl  PassthroughFShader.glsl  PassthroughVShader.glsl  RTTFShader.glsl  RTTVShader.glsl  Reduction2FShader.glsl  Reduction4FShader.glsl  Reduction4X3YFShader.glsl  Reduction5FShader.glsl  ReductionVShader.glsl  SubtractionFragmentShader.glsl  SubtractionVertexShader.glsl  TexFragmentShader.glsl  VertexShader.glsl
src/: Application.cpp  depth_generation.cpp  depth_generation.h  main.cpp  pso.cpp  pso.h
